add message in salon / review geocoding for event location / add swagger definition
